We are making great progress here; It's runnable!